--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <div class="container">
       <div class="dspl">
         <div id="time" style="margin-bottom: 0.5rem">00:00:00</div>
-        <div id="song-name">
-          Drag&nbsp;&nbsp;&nbsp;music&nbsp;&nbsp;.&nbsp;&nbsp;&nbsp;Click&nbsp;&nbsp;&nbsp;CD&nbsp;&nbsp;&nbsp;to&nbsp;&nbsp;&nbsp;browse
-        </div>
+        <div id="song-name">Drag music. Click CD to browse.</div>
       </div>
       <div class="cd-player">
         <div class="cd-player-text"></div>
